--- a/css/style.css
+++ b/css/style.css
@@ -309,39 +309,49 @@ input[name=cmd] {
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    margin-top: 20px;
+    margin-top: 30px;
+ 
 }
 
 .input_item_back_style{
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     margin: 0 auto;
     margin-top: 10px;
+
 }
 
 .input_item_name_style {
-    width: 80px;
+    width: 120px;
     font-size: 15px;
+    margin-right: 20px;
+
 }
 
-input.input_item_value_style {
-    width: 500px;
+textarea.input_item_value_style {
+    width: 300px;
     font-size: 15px;
+    border-color:  rgb(248, 182, 44);
+    border-radius: 2px;
+    resize: none;
 }
 
-input.input_item_value_style_high {
+textarea.input_item_value_style_high {
     overflow-x: auto;
-    width: 500px;
-    height: 48px;
+    width: 300px;
+    height: 60px;
     font-size: 15px;
+    border-color:  rgb(248, 182, 44);
+    border-radius: 2px;
+    resize: none;
 }
 
 button.record_btn_style {
     width: 80px;
     font-size: 20px;
-    margin-right: 20px;
+    margin-right: 40px;
 }
 
 .buttons_back_style {
