--- a/css/style.css
+++ b/css/style.css
@@ -201,8 +201,7 @@ kbd {
 
 .svg {
     position: relative;
-    overflow-y: hidden;
-    overflow-x: auto;
+    overflow: hidden;
     height: 220px;
     width: 100%;
     background-color: rgb(0,0,0);
@@ -219,7 +218,7 @@ svg {
     stroke-width: 2;
     stroke: #FFFFFF;
     color: #FFFFFF;
-    fill: #FFFFFF
+    fill: #FFFFFF;
 }
 
 input[name=cmd] {
@@ -234,16 +233,33 @@ input[name=cmd] {
 
 #notes use {
     stroke: #FFFFFF;
+    z-index: 3;
 }
 
 #notes use-sharp {
     stroke: #FFFFFF;
     fill: #FFFFFF;
+    z-index: 3;
+}
+
+.use {
+    stroke: rgba(255, 255, 255, 1.0);
+    fill: rgba(255, 255, 255, 1.0);
+    color: rgba(255, 255, 255, 1.0);
+    z-index: 3;
+}
+
+.use-sample {
+    stroke: rgba(255, 255, 255, 0.25);
+    fill: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.5);
+    z-index: 2;
 }
 
 #notes use.playing {
     stroke: #f00;
     fill: #F00;
+    z-index: 3;
 }
 
 #notes clef {
